--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% @posts.each do |post| %>
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card white darken-1">
+          <div class="card-content dark-text">
+            <span class="card-title"><%= post.title %></span>
+            <p><%= post.writer %></p>
+          </div>
+          <div class="card-action">
+            <a href="#">글보기</a>
+          </div>
+        </div>
+      </div>
+    </div>
+<% end %>
