--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<%= form_for(@post, url: post_path, method: :patch) do |f| %>
+    <div class="input-field col s12">
+      <%= f.label :title %><br>
+      <%= f.text_field :title, :required => true, placeholder: '제목' %>
+    </div>
+    <div class="input-field col s12">
+      <%= f.label :writer %><br>
+      <%= f.text_field :writer, :required => true, placeholder: '글쓴이' %>
+    </div>
+    <div class="input-field col s12">
+      <%= f.label :content %><br>
+      <%= f.text_area :content, class: 'materialize-textarea' %>
+    </div>
+    <%= f.submit '글쓰기', class: 'btn waves-effect waves-light right' %>
+<% end %>
