--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,4 +15,15 @@
 <%= yield %>
 
 </body>
+<footer>
+  <div class="fixed-action-btn horizontal click-to-toggle">
+    <a class="btn-floating btn-large red">
+      <i class="material-icons">menu</i>
+    </a>
+    <ul>
+      <li><a href="posts/new" class="btn-floating red"><i class="material-icons">새글쓰기</i></a></li>
+      <li><a href="posts" class="btn-floating yellow darken-1"><i class="material-icons">전체글</i></a></li>
+    </ul>
+  </div>
+</footer>
 </html>
