--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 <footer>
@@ -21,8 +24,8 @@
       <i class="material-icons">menu</i>
     </a>
     <ul>
-      <li><a href="posts/new" class="btn-floating red"><i class="material-icons">새글쓰기</i></a></li>
-      <li><a href="posts" class="btn-floating yellow darken-1"><i class="material-icons">전체글</i></a></li>
+      <li><a href="posts/new" class="btn-floating red"><i class="material-icons">mode_edit</i></a></li>
+      <li><a href="posts" class="btn-floating yellow darken-1"><i class="material-icons">list</i></i></a></li>
     </ul>
   </div>
 </footer>
